--- a/components/test-devai168-oct16/overlays/development/deployment-patch.yaml
+++ b/components/test-devai168-oct16/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: test-devai168-oct16
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/jdubrick-ai/test-devai168-oct16:3c07a6a99e47a04ae1dbc892aaea868d84368a5e@sha256:175720068d6857b6d03350149b54849e4e4c4960fd471f2a1cc0869836d3325b # use pre-built to bootstrap 
+          name: app-inference
